--- a/src/cartacapital/portal/externalcontent/locales/pt_BR/LC_MESSAGES/plone.po
+++ b/src/cartacapital/portal/externalcontent/locales/pt_BR/LC_MESSAGES/plone.po
@@ -1,9 +1,6 @@
-# --- PLEASE EDIT THE LINES BELOW CORRECTLY ---
-# SOME DESCRIPTIVE TITLE.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 msgid ""
 msgstr ""
-"Project-Id-Version: cartacapital.portal.externalcontent 1.0\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2011-09-19 17:08+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
@@ -11,8 +8,14 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=1; plural=0\n"
+"Language-Code: en\n"
+"Language-Name: English\n"
+"Preferred-Encodings: utf-8 latin1\n"
+"Domain: DOMAIN\n"
 
 #: cartacapital/portal/externalcontent/profiles/default/types/ExternalBlog.xml
 #: cartacapital/portal/externalcontent/upgrades/v2000/profiles/default/types/ExternalBlog.xml
 msgid "Config"
-msgstr ""
+msgstr "Configurações"
+
